# search-google-tool

./: .gitignore  ISSUES.md  Makefile  README.md  docker-compose.yml
go-mcp/: Dockerfile  config.go  fetch.go  go.mod  go.sum  main.go  searxng.go  server.go
node-mcp/: Dockerfile  package-lock.json  package.json
node-mcp/src/: config.ts  fetch.ts  index.ts  server.ts
py-mcp/: .dockerignore  Dockerfile  pyproject.toml
py-mcp/src/: __init__.py  __main__.py  config.py  fetch.py  searxng.py  server.py
searxng/: settings.yml
src/: fetch.ts  searxng.ts  server.ts
