[project]
name = "searxng-mcp"
version = "1.0.0"
description = "MCP server wrapping SearXNG for web search"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "curl_cffi>=0.7.0",
    "readability-lxml>=0.8.1",
]

[project.scripts]
searxng-mcp = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]